# homegear-ipc-example

./: .gitignore  CMakeLists.txt  README.md  configure.ac
src/: IpcClient.cpp  IpcClient.h  Makefile.am  main.cpp
